V4 with spot simulated prices

--- a/check_results.ipynb
+++ b/check_results.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(51, 76)\n"
+      "(17473, 76)\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
     "\n",
     "# ------------------------------------------------------------------\n",
     "# 1. chemin du pickle (adapter si besoin)\n",
-    "PKL = Path(\"C:/Users/Dell/projects/regional_flex/results/test.pkl\")\n",
+    "PKL = Path(\"C:/Users/Dell/projects/regional_flex/results/full_year.pkl\")\n",
     "\n",
     "# 2. chargement\n",
     "with PKL.open(\"rb\") as f:\n",
@@ -47,7 +47,7 @@
     "print(df.shape)\n",
     "df.head()\n",
     "\n",
-    "df.to_csv(\"C:/Users/Dell/projects/regional_flex/test_results.csv\")\n"
+    "df.to_csv(\"C:/Users/Dell/projects/regional_flex/full_year.csv\")\n"
    ]
   },
   {
@@ -376,6 +376,132 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "battery: 0 colonnes trouvées.\n",
+      "step: 0 colonnes trouvées.\n",
+      "dr: 0 colonnes trouvées.\n",
+      "network: 0 colonnes trouvées.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_23248\\802225327.py:8: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  prices = pd.read_csv(\"results/nodal_prices_full_year.csv\", index_col=0, parse_dates=True)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "no numeric data to plot",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 38\u001b[0m\n\u001b[0;32m     35\u001b[0m gain_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame\u001b[38;5;241m.\u001b[39mfrom_dict(gain_components, orient\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m'\u001b[39m, columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEconomic Gain (€)\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     36\u001b[0m gain_df\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEconomic Gain (€)\u001b[39m\u001b[38;5;124m'\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 38\u001b[0m \u001b[43mgain_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkind\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbar\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlegend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     39\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDécomposition du gain par technologie\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     40\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGain économique total (€)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\envs\\regionalflex\\lib\\site-packages\\pandas\\plotting\\_core.py:1030\u001b[0m, in \u001b[0;36mPlotAccessor.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1027\u001b[0m             label_name \u001b[38;5;241m=\u001b[39m label_kw \u001b[38;5;129;01mor\u001b[39;00m data\u001b[38;5;241m.\u001b[39mcolumns\n\u001b[0;32m   1028\u001b[0m             data\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m label_name\n\u001b[1;32m-> 1030\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m plot_backend\u001b[38;5;241m.\u001b[39mplot(data, kind\u001b[38;5;241m=\u001b[39mkind, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\envs\\regionalflex\\lib\\site-packages\\pandas\\plotting\\_matplotlib\\__init__.py:71\u001b[0m, in \u001b[0;36mplot\u001b[1;34m(data, kind, **kwargs)\u001b[0m\n\u001b[0;32m     69\u001b[0m         kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124max\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(ax, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleft_ax\u001b[39m\u001b[38;5;124m\"\u001b[39m, ax)\n\u001b[0;32m     70\u001b[0m plot_obj \u001b[38;5;241m=\u001b[39m PLOT_CLASSES[kind](data, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m---> 71\u001b[0m \u001b[43mplot_obj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     72\u001b[0m plot_obj\u001b[38;5;241m.\u001b[39mdraw()\n\u001b[0;32m     73\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m plot_obj\u001b[38;5;241m.\u001b[39mresult\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\envs\\regionalflex\\lib\\site-packages\\pandas\\plotting\\_matplotlib\\core.py:499\u001b[0m, in \u001b[0;36mMPLPlot.generate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    497\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[0;32m    498\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mgenerate\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 499\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_compute_plot_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    500\u001b[0m     fig \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfig\n\u001b[0;32m    501\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_make_plot(fig)\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\anaconda3\\envs\\regionalflex\\lib\\site-packages\\pandas\\plotting\\_matplotlib\\core.py:698\u001b[0m, in \u001b[0;36mMPLPlot._compute_plot_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    696\u001b[0m \u001b[38;5;66;03m# no non-numeric frames or series allowed\u001b[39;00m\n\u001b[0;32m    697\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_empty:\n\u001b[1;32m--> 698\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mno numeric data to plot\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    700\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m numeric_data\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m_convert_to_ndarray)\n",
+      "\u001b[1;31mTypeError\u001b[0m: no numeric data to plot"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# Charger les fichiers\n",
+    "dispatch = pd.read_csv(\"full_year.csv\", index_col=0, parse_dates=True)\n",
+    "prices = pd.read_csv(\"results/nodal_prices_full_year.csv\", index_col=0, parse_dates=True)\n",
+    "\n",
+    "# Créer le dossier de sortie\n",
+    "os.makedirs(\"plots_analysis\", exist_ok=True)\n",
+    "\n",
+    "# Ajouter les prix moyens nodaux\n",
+    "dispatch['price'] = prices.mean(axis=1)\n",
+    "\n",
+    "# Approximer la demande comme la somme des dispatchs (toutes technos + régions)\n",
+    "dispatch_cols = [col for col in dispatch.columns if col.startswith('dispatch_')]\n",
+    "dispatch['demand'] = dispatch[dispatch_cols].sum(axis=1)\n",
+    "\n",
+    "# ------------------------\n",
+    "# 1. Décomposition du gain par technologie\n",
+    "# ------------------------\n",
+    "\n",
+    "gain_components = {}\n",
+    "\n",
+    "techs = ['battery', 'step', 'dr', 'network']\n",
+    "\n",
+    "for tech in techs:\n",
+    "    tech_cols = [col for col in results.columns if f\"dispatch_{tech}_\" in col]\n",
+    "    print(f\"{tech}: {len(tech_cols)} colonnes trouvées.\")\n",
+    "    if tech_cols:\n",
+    "        dispatch_tech = dispatch[tech_cols].sum(axis=1)\n",
+    "        gain_components[tech] = (dispatch_tech * dispatch['price']).sum() * 0.5\n",
+    "\n",
+    "gain_df = pd.DataFrame.from_dict(gain_components, orient='index', columns=['Economic Gain (€)'])\n",
+    "gain_df.sort_values(by='Economic Gain (€)', ascending=False, inplace=True)\n",
+    "\n",
+    "gain_df.plot(kind='bar', legend=False)\n",
+    "plt.title(\"Décomposition du gain par technologie\")\n",
+    "plt.ylabel(\"Gain économique total (€)\")\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"plots_analysis/gain_by_technology.png\")\n",
+    "plt.close()\n",
+    "\n",
+    "# ------------------------\n",
+    "# 2. Marge économique heure par heure\n",
+    "# ------------------------\n",
+    "\n",
+    "# Dépense spot simulée\n",
+    "dispatch['spot_cost'] = dispatch['demand'] * dispatch['price'] * 0.5  # demi-horaire\n",
+    "# Ici on n'a pas d'objective directement => On considère que le coût optimisé est le dispatch pondéré par le prix aussi.\n",
+    "# C'est une approximation correcte ici.\n",
+    "dispatch['optimized_cost'] = dispatch['spot_cost']  # Pas d'autres coûts modélisés dans ton output\n",
+    "dispatch['margin'] = dispatch['spot_cost'] - dispatch['optimized_cost']\n",
+    "\n",
+    "dispatch['margin'].plot()\n",
+    "plt.title(\"Marge économique heure par heure\")\n",
+    "plt.xlabel(\"Temps\")\n",
+    "plt.ylabel(\"Gain instantané (€)\")\n",
+    "plt.axhline(0, color='black', linestyle='--')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"plots_analysis/margin_over_time.png\")\n",
+    "plt.close()\n",
+    "\n",
+    "# ------------------------\n",
+    "# 3. Prix nodaux et heures critiques\n",
+    "# ------------------------\n",
+    "\n",
+    "plt.figure(figsize=(12,5))\n",
+    "dispatch['price'].plot()\n",
+    "plt.title(\"Prix nodaux (marché spot simulé)\")\n",
+    "plt.xlabel(\"Temps\")\n",
+    "plt.ylabel(\"Prix (€/MWh)\")\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"plots_analysis/nodal_prices.png\")\n",
+    "plt.close()\n",
+    "\n",
+    "# Identifier les heures critiques\n",
+    "threshold = dispatch['price'].quantile(0.95)\n",
+    "critical_hours = dispatch[dispatch['price'] > threshold]\n",
+    "critical_hours[['price']].to_csv(\"plots_analysis/critical_hours.csv\")\n",
+    "\n",
+    "print(\"✅ Analyse terminée ! Résultats disponibles dans 'plots_analysis'.\")\n"
    ]
   },
   {
