--- a/interactive_flex_dashboard.ipynb
+++ b/interactive_flex_dashboard.ipynb
@@ -193,8 +193,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "regionalflex",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
