--- a/interactive_flex_dashboard.ipynb
+++ b/interactive_flex_dashboard.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "ede42345",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b30276cb8f941109404f896aab6348f",
+       "model_id": "fb8044ffcf9e40b79b0681d975ddfd68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c79dc0b18bff457498f42144ace0a2b3",
+       "model_id": "356ce4ba81a84056a084d0825f657459",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +37,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a478cb6aa94b4eb291cfb01e15b54e4a",
+       "model_id": "12b830b41ac143cfb93fa5fa765bff11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -45,7 +45,7 @@
        "Output()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bf704be",
+   "id": "62f3ae12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -199,7 +199,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.17"
   }
  },
